# yaff

./: .gitignore  pyproject.toml  readme.md
examples/: .gitignore  0 line_fit.ipynb  1 rhessi_fit.ipynb  2 stix_fit.ipynb  3 fermi_fit.ipynb  4 simultaneous_nustar_fit.ipynb  5 solexs_fit.ipynb  6 nustar_gain_pileup_fit.ipynb  example_support.py  fermi_fit.ipynb  line_fit.ipynb  nustar_fit.ipynb  readme.md  rhessi_fit.ipynb  simultaneous_fit.ipynb  simultaneous_nustar_fit.ipynb  solexs_support.py  stix_fit.ipynb
yaff/: common_likelihoods.py  common_models.py  fitting.py  plotting.py  rebin_flux.py
