[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1"
name = "yaff"
dependencies = [
    "astropy",
    "matplotlib",
    "scipy",
    "emcee",
    "corner",
    "dill",
    # For pickling locals; uses dill instead of pickle
    "multiprocess",
    "ruff>=0.7.2",
]

[project.optional-dependencies]
examples = [
    'asdf',
    'asdf-astropy'
]