[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1"
name = "yaff"
dependencies = [
    "astropy",
    "matplotlib",
    "scipy",
    "emcee",
    "corner",
    "dill",
    # For pickling locals; uses dill instead of pickle
    "multiprocess",
    "ruff",
    "tqdm",
]

[project.optional-dependencies]
examples = [
    "asdf",
    "asdf-astropy",
    "ipywidgets",
    "ipykernel",
    "ipynb",
    "jupyter",
    "pyqt6",
    "pyqt5",
    "pyside2",

    # Permits manipulation of Fermi/GBM data
    "astro-gdt-fermi",
    
    # Required for model functions and data loading
    "sunkit_spex @ git+https://github.com/sunpy/sunkit-spex.git",
    "sunpy[all]",
]
