[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.2"
name = "yaff"
dependencies = [
    "astropy",
    "matplotlib",
    # Need this for the more stable Levenberg-Marquadt 3-point Jacobian
    "scipy>1.16.0",
    "emcee",
    "corner",
    "dill",
    # For pickling locals; uses dill instead of pickle
    "multiprocess",
    "ruff",
    "tqdm",
]

[project.optional-dependencies]
examples = [
    "asdf",
    "asdf-astropy",
    "ipywidgets",
    "ipykernel",
    "ipynb",
    "jupyter",
    "pyqt6",
    "pyqt5",
    "pyside2",

    # Permits manipulation of Fermi/GBM data
    "astro-gdt-fermi",
    
    # Required for model functions and data loading
    "sunkit_spex @ git+https://github.com/sunpy/sunkit-spex.git",
    "sunpy[all]",
]
